Implemented feature to enable filtering on either explicitly tagged dances or to also incude inferred dances.  This involves the actual search, the dance query string, the serach text and the advanced search form.
I also did a small refactor of the SongFilter formatter to push the dancequery text down in the the dancequery object.

--- a/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -97,12 +97,17 @@
                         }
                     </select>
                 </div>
-                <div id="dance-boolean" class="col-sm-4" style="padding-left: 15px">
-                    <label class="inline" style="width:3em">
+                <div id="dance-boolean" class="col-sm-2" style="padding-left: 15px">
+                    <label class="inline">
                         <input type="radio" name="db" id="db-any" value="any" @(danceQuery.IsExclusive ? string.Empty : "checked") />Any
                     </label>&nbsp;&nbsp;
-                    <label class="inline" style="width:3em">
+                    <label class="inline">
                         <input type="radio" name="db" id="db-all" value="all" @(danceQuery.IsExclusive ? "checked" : string.Empty) />All
+                    </label>
+                </div>
+                <div id="dance-inferred" class="col-sm-3" style="padding-left: 15px">
+                    <label class="inline">
+                        <input type="checkbox" name="dx" id="inferred" @(danceQuery.IncludeInferred ? "checked" : string.Empty) />Include Inferred
                     </label>
                 </div>
             </div>
@@ -221,6 +226,15 @@
         else
         {
             <script>var danceOr = true</script>
+        }
+
+        if (danceQuery.IncludeInferred)
+        {
+            <script>var danceInferred = true</script>
+        }
+        else
+        {
+            <script>var danceInferred = false</script>
         }
 
         string filterString = null;
