--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -136,8 +136,8 @@
 
         var dances = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.NonPerformanceDanceTypes));
     </script>
-    @Scripts.Render("~/bundles/jqueryval");
-    @Scripts.Render("~/bundles/knockout");
-    @Scripts.Render("~/bundles/knockout-mapping");
-    @Scripts.Render("~/bundles/tempi");
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/knockout")
+    @Scripts.Render("~/bundles/knockout-mapping")
+    @Scripts.Render("~/bundles/tempi")
 }
