Misc. Cleanup of Periodic jobs based on the realization that an easier way to schedule periodic jobs is to use the azure scheduler to just poke a webapi...

--- a/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
@@ -36,6 +36,7 @@
     <li>@Html.ActionLink("Show Status", "AdminStatus", "Admin")</li>
     <li>Application Insights Telemetry Disabled = @Html.ActionLink(TelemetryConfiguration.Active.DisableTelemetry.ToString(), "DisableTelemetry", "Admin", new {disable = !TelemetryConfiguration.Active.DisableTelemetry}, null)</li>
     <li>Verbose Telemetry Enabled = @Html.ActionLink(DMController.VerboseTelemetry.ToString(), "EnableVerboseTelemetry", "Admin", new { enable = !DMController.VerboseTelemetry }, null)</li>
+    <li>@Html.ActionLink("Flush Telemetry", "FlushTelemetry", "Admin")</li>
 </ul>
 
 <hr />
