--- a/DanceCalc/m4d/Views/Searches/Index.cshtml
+++ b/DanceCalc/m4d/Views/Searches/Index.cshtml
@@ -63,7 +63,7 @@
         t.Action = "Advanced";
         <tr>
             <td>
-                @Html.ActionLink(@t.Description, "Index", "Song", new { filter }, null)
+                @Html.ActionLink(@t.Description, "Index", "Song", new { filter=t }, null)
             </td>
             @if (showDetails)
             {
