--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -100,6 +100,7 @@
                             </li>
                             <li>@Html.ActionLink("Song Library", "index", "song")
                                 <ul style="list-style-type:none" role="menu">
+                                    <li>@Html.ActionLink("Simple Search (BETA)", "azuresearch", "song")</li>
                                     <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song")</li>
                                 </ul>
                             </li>
