--- a/DanceCalc/m4d/Views/Song/AzureSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/AzureSearch.cshtml
@@ -33,8 +33,16 @@
    </div>
 }
 <div class="row">
-    <p class="col-xs-6">  @Html.ActionLink("Saved Searches", "index", "searches", new { user = @userName, filter }, new { id = "saved-search" })</p>
-    <p class="col-xs-6" style="text-align: right; padding-right:20px">@Html.ActionLink(isSimple ? "Switch to Advanced" : "Switch to Simple", "AzureSearch", "song", new { filter=filter.ToggleMode() }, new { id = "search-mode" })</p>
+    <p class="col-xs-6"> @Html.ActionLink("Saved Searches", "index", "searches", new {user = @userName, filter}, new {id = "saved-search"})</p>
+    @if (isSimple)
+    {
+        <p class="col-xs-4" style="text-align: right">@Html.ActionLink("Classic Search", "index", "song", null, new { id = "basic-search" })</p>
+    }
+    else
+    {
+        <p class="col-xs-6" style="text-align: right; padding-right:20px">@Html.ActionLink(isSimple ? "Switch to Advanced" : "Switch to Simple", "AzureSearch", "song", new { filter = filter.ToggleMode() }, new { id = "search-mode" })</p>
+    }
+    @*<p class="col-xs-6" style="text-align: right; padding-right:20px">@Html.ActionLink(isSimple ? "Switch to Advanced" : "Switch to Simple", "AzureSearch", "song", new { filter=filter.ToggleMode() }, new { id = "search-mode" })</p>*@
 </div>
 
 @{ Html.RenderPartial("_ListSongs", @Model, ViewData);}
