--- a/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
@@ -28,6 +28,7 @@
 
 <h3>Clean Up</h3>
 <ul>
+    <li>@Html.ActionLink("Cleanup Properties", "CleanupProperties", new { count = 100 }, null)</li>
     <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
     <li>@Html.ActionLink("Update Title Hashes", "UpdateTitleHash")</li>
     <li>@Html.ActionLink("Clean up Tempi", "CleanTempi")</li>
