--- a/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
@@ -37,6 +37,7 @@
     <li>Application Insights Telemetry Disabled = @Html.ActionLink(TelemetryConfiguration.Active.DisableTelemetry.ToString(), "DisableTelemetry", "Admin", new {disable = !TelemetryConfiguration.Active.DisableTelemetry}, null)</li>
     <li>Verbose Telemetry Enabled = @Html.ActionLink(DMController.VerboseTelemetry.ToString(), "EnableVerboseTelemetry", "Admin", new { enable = !DMController.VerboseTelemetry }, null)</li>
     <li>@Html.ActionLink("Flush Telemetry", "FlushTelemetry", "Admin")</li>
+    <li>@Html.ActionLink("Reset Admin Status", "ResetAdmin", "Admin")</li>
 </ul>
 
 <hr />
