Update ratings from properties WAS working already, but we weren't calling during the property cleanup it if the only thing that had changed was rating weights.  This should fix that oversight as well as add individual song testing of this feature.

--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -16,6 +16,7 @@
             @Html.ActionLink("Delete", "Delete", new {id = Model.SongId, filter}, new {@class = "btn btn-small btn-default", role = "button"})
             @Html.ActionLink("Cleanup Albums", "CleanupAlbums", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("Cleanup Purchase", "CleanMusicServices", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("Rebuild Ratings", "UpdateRatings", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @*@Html.ActionLink("Groove", "MusicServiceSearch", new { id = Model.SongId, type = "X", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("ITunes", "MusicServiceSearch", new { id = Model.SongId, type = "I", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("Amazon", "MusicServiceSearch", new { id = Model.SongId, type = "A", filter = filter }, new { @class = "btn btn-small btn-default", role = "button" })
