Do the basic refactoring and enable knockout in musicservice.js

--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -3,6 +3,8 @@
 @using m4d.Utilities
 @model SongCounts
 
+@Html.Partial("_SetupFilterScript")
+
 @{
     ViewBag.Title = Model.DanceName + " Information, Top Ten List, and Resources.";
     ViewBag.Description = "General information about the dance" + Model.DanceName + " along with a top ten song list, preferred tempo details, and other resources.";
