--- a/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -255,6 +255,7 @@
 
     @*Local Scripts*@
     @Scripts.Render("~/bundles/tagchooser")
+    @Scripts.Render("~/bundles/advancedsearch")
     @Scripts.Render("~/bundles/catalog")
 
     @*Style Sheets for external libraries*@
