--- a/DanceCalc/m4d/Views/Song/SetupSongScript.cshtml
+++ b/DanceCalc/m4d/Views/Song/SetupSongScript.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Runtime.Serialization.Json
-@using Microsoft.AspNet.Identity
+﻿@using Microsoft.AspNet.Identity
 @model SongDetails
 
 @{
