--- a/DanceCalc/m4d/Views/Song/AzureSearch.cshtml
+++ b/DanceCalc/m4d/Views/Song/AzureSearch.cshtml
@@ -15,6 +15,8 @@
     var userName = filter.UserQuery.IsEmpty ? User.Identity.Name : filter.UserQuery.UserName;
 }
 
+@Html.Partial("_SetupFilterScript")
+
 <div class="row">
     <h1 class="col-sm-12" style="width: auto; font-size: 22px;">Search Songs (BETA)</h1>
 </div>
@@ -36,14 +38,15 @@
     <p class="col-xs-6"> @Html.ActionLink("Saved Searches", "index", "searches", new {user = @userName, filter}, new {id = "saved-search"})</p>
     @if (isSimple)
     {
-        <p class="col-xs-4" style="text-align: right">@Html.ActionLink("Classic Search", "index", "song", null, new { id = "basic-search" })</p>
+        <p class="col-xs-4" style="text-align: right">@Html.ActionLink("Classic Search", "index", "song", null, new {id = "basic-search"})</p>
     }
     else
     {
-        <p class="col-xs-6" style="text-align: right; padding-right:20px">@Html.ActionLink(isSimple ? "Switch to Advanced" : "Switch to Simple", "AzureSearch", "song", new { filter = filter.ToggleMode() }, new { id = "search-mode" })</p>
+        <p class="col-xs-6" style="text-align: right; padding-right: 20px">@Html.ActionLink(isSimple ? "Switch to Advanced" : "Switch to Simple", "AzureSearch", "song", new {filter = filter.ToggleMode()}, new {id = "search-mode"})</p>
     }
     @*<p class="col-xs-6" style="text-align: right; padding-right:20px">@Html.ActionLink(isSimple ? "Switch to Advanced" : "Switch to Simple", "AzureSearch", "song", new { filter=filter.ToggleMode() }, new { id = "search-mode" })</p>*@
 </div>
+
 
 @{ Html.RenderPartial("_ListSongs", @Model, ViewData);}
 
@@ -68,7 +71,6 @@
     @Scripts.Render("~/bundles/tagchooser")
     @Scripts.Render("~/bundles/catalog")
     @Scripts.Render("~/bundles/azuresearch")
-
 
     @Styles.Render("~/bundles/tools-style")
 }
