--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -83,7 +83,7 @@
 {
     foreach (var titem in song.TagSummary.Tags.Where(t => !string.Equals(t.TagClass, "dance", StringComparison.OrdinalIgnoreCase)))
     {
-        @TagHelpers.TagButton(titem, filter)
+        @TagHelpers.TagModalButton(song, titem, filter)
     }
 }
 
@@ -98,18 +98,6 @@
     <td class="hidden-xs" data-toggle="tooltip" data-placement="left" title="@timeMessage">
         @(created? @song.CreatedOrder : @song.ModifiedOrder)
     </td>
-}
-
-@helper Purchase(SongBase song, char id, string logo, string title, string help)
-{
-    if (string.IsNullOrEmpty(song.Purchase) || !song.Purchase.Contains(id))
-    {
-        return;
-    }
-
-    var buttonId = string.Format("{0}{1}", id, song.SongId);
-    var link = string.Format("~/Content/{0}-logo.png", logo);
-    <li ><a href = "#" id = "@buttonId" class="play-link"><img src="@Url.Content(link)" alt="@help" width="20" height="20" /> @title</a></li>
 }
 
 @helper LikeHelper(SongBase song, LikeDictionary likes, string img, string modifier, string danceId, string tipNull, string tipTrue, string tipFalse)
@@ -154,7 +142,6 @@
     </a>
 }
 
-
 <script>
     window.VoteOptions = {
         'true': { tip: '@likeTipTrue', img: '' },
@@ -162,37 +149,6 @@
         'null': { tip: '@likeTipNull', img: '-outline' }
     };
 </script>
-
-<div class="modal fade" id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="playModalLabel"><span data-bind="text: title"></span> by <span data-bind="text: artist"></span></h4>
-            </div>
-            <div class="modal-body">
-                <ul data-bind="foreach: purchase">
-                    <li style="list-style: none; padding-bottom: 5px"><a href="#" class="play-link" data-bind="attr:{id:id + $parent.songId()}"><img data-bind="attr:{src:'/content/' + logo + '-logo.png', alt:title}" width="32" height="32"/><span style="padding-left: 8px" data-bind="text:help"></span></a></li>
-                </ul>
-                <div data-bind="if: sample">
-                    @*<span data-bind="text:sample"></span>*@
-                    <audio id="sample-player" controls>
-                        <source type="audio/mpeg">
-                        Your browswer does not support audio
-                    </audio>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-    @*var buttonId = string.Format("{0}{1}", id, song.SongId);
-    var link = string.Format("~/Content/{0}-logo.png", logo);
-<li><a href="#" id="@buttonId" class="play-link"><img src="@Url.Content(link)" alt="@help" width="20" height="20" /> @title</a></li>*@
 
 <table class="table table-striped table-songs">
     <thead>
@@ -352,23 +308,6 @@
                                >
                                 <img src="@Url.Content("~/Content/playbutton.png")" alt="Play" width="20" height="20"/>
                             </a>
-                            @*<div id="@id" class="btn-group play-button">
-                                <a href="#" role="button" class="btn dropdown-toggle" style="padding:0" data-toggle="dropdown" aria-expanded="false"><img src="@Url.Content("~/Content/playbutton.png")" alt="Play" width="20" height="20"/></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    @Purchase(item, 'X', "xbox", "Groove", "Availiable on Groove Music")
-                                    @Purchase(item, 'I', "itunes", "ITunes", "Availiable on ITunes")
-                                    @Purchase(item, 'A', "amazon", "Amazon", "Availiable at Amazon")
-                                    @Purchase(item, 'S', "spotify", "Spotify", "Availiable on Spotify")
-                                    <li><a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/"><span class="glyphicon glyphicon-question-sign" style="margin-left: .25em; margin-right: .25em"></span> Help</a></li>
-                                </ul>
-                                @if (!string.IsNullOrWhiteSpace(item.Sample) && item.Sample != ".")
-                                {
-                                    var aid = "Audio" + item.SongId;
-                                    <audio id="@aid" style="visibility: hidden">
-                                        <source src="@item.Sample" type="audio/mpeg">
-                                    </audio>
-                                }
-                            </div>*@
                         }
                     }
                 </td>
@@ -458,7 +397,7 @@
                                         tags += bstring;
                                         foreach (var dtitem in ditem.TagSummary.Tags)
                                         {
-                                            tags += TagHelpers.TagButton(dtitem, filter); //"<span class=\"label label-" + dtitem.TagClass.ToLower() + "\">" + dtitem.TagValue + "</span> ";
+                                            tags += TagHelpers.TagModalButton(item, dtitem, filter); //"<span class=\"label label-" + dtitem.TagClass.ToLower() + "\">" + dtitem.TagValue + "</span> ";
                                         }
                                     }
                                     var danceQuery = filter.DanceQuery;
@@ -508,3 +447,6 @@
         }
     </tbody>
 </table>
+
+@Html.Partial("_playmodal")
+@Html.Partial("_filtermodal")
